--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
        "  )\n",
        "  (1): GlobalAverage(axes=[2, 3], keepdims=False)\n",
        "  (2): Linear(in_features=64, out_features=10, bias=True)\n",
-       "  (3): Softmax(dim=None)\n",
+       "  (3): Softmax(dim=-1)\n",
        ")"
       ]
      },
@@ -61,7 +61,7 @@
     "    blocks.ConvBlock(1, 64, kernel_size=7, padding=3),\n",
     "    blocks.commons.GlobalAverage(),\n",
     "    nn.Linear(64, 10),\n",
-    "    nn.Softmax()\n",
+    "    nn.Softmax(dim=-1)\n",
     "])\n",
     "\n",
     "model.cuda(0)"
@@ -82,13 +82,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Data(data.Sequence):\n",
+    "class Data(data.StandardDataset):\n",
     "    \n",
     "    def get_len(self):\n",
-    "        return 10\n",
+    "        return 100\n",
     "    \n",
     "    def get_item(self, idx):\n",
-    "        return np.random.randn(64, 1, 28, 28), np.random.randint(0, 10, size=(64,))"
+    "        return np.random.randn(1, 28, 28), np.random.randint(0, 10)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = Data(x_gpu=\"cuda:0\", y_gpu=\"cuda:0\")"
+    "d = Data()"
    ]
   },
   {
@@ -135,51 +135,37 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48395987874e43d08e653b59ce20a818",
+       "model_id": "8ce5476283d84609b9e49997a75005ce",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W:\\Anaconda3\\envs\\research\\lib\\site-packages\\torch\\nn\\modules\\container.py:92: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  input = module(input)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.3021488189697266\n",
-      "accuracy    0.09375\n",
-      "loss    2.302395820617676\n",
-      "accuracy    0.07291666666666667\n",
-      "loss    2.3019590854644774\n",
-      "accuracy    0.0875\n",
-      "loss    2.302225112915039\n",
-      "accuracy    0.08928571428571429\n",
-      "loss    2.3021306726667614\n",
-      "accuracy    0.10243055555555555\n",
+      "loss    2.300403118133545\n",
+      "accuracy    0.15625\n",
+      "loss    2.301056702931722\n",
+      "accuracy    0.13541666666666666\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92584cf9d1734002bdcdbb1c55ee1b7c",
+       "model_id": "dd4a158aebc443b68ed9cfd3af7b24a8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -196,12 +182,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63acbca67d9d45a1b90c23580583d7f2",
+       "model_id": "369daa91bf544a8ca43bc49178b5cc3b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -211,28 +197,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.3007750511169434\n",
-      "accuracy    0.140625\n",
-      "loss    2.301407734553019\n",
-      "accuracy    0.14583333333333334\n",
-      "loss    2.3023250579833983\n",
-      "accuracy    0.140625\n",
-      "loss    2.302020754132952\n",
-      "accuracy    0.140625\n",
-      "loss    2.3022089269426136\n",
-      "accuracy    0.13368055555555555\n",
+      "loss    2.300450086593628\n",
+      "accuracy    0.109375\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96e07b9e51c5488fa7942a4c68514546",
+       "model_id": "aada43e3ae9d4fd7b0b58fb8f8b9dee9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -249,12 +227,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd491590f3234d4593bb343b3328e961",
+       "model_id": "618a585c744c43d68e5fb39826aecf1d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -264,28 +242,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.2990591526031494\n",
-      "accuracy    0.15625\n",
-      "loss    2.302384376525879\n",
-      "accuracy    0.09895833333333333\n",
-      "loss    2.3013820171356203\n",
-      "accuracy    0.096875\n",
-      "loss    2.3010283538273404\n",
-      "accuracy    0.10491071428571429\n",
-      "loss    2.30114836162991\n",
-      "accuracy    0.109375\n",
+      "loss    2.303591251373291\n",
+      "accuracy    0.0625\n",
+      "loss    2.3034211794535318\n",
+      "accuracy    0.08333333333333333\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f70a316703684a30b7eaf53c734a914f",
+       "model_id": "1483e1ead165469fbf9f5a404bcba182",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -302,12 +274,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1df304d7ac4f4f168b73c665d3853952",
+       "model_id": "7a160df44c1246768b8c7b50ba0ea956",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -317,28 +289,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.3079569339752197\n",
+      "loss    2.30343759059906\n",
       "accuracy    0.046875\n",
-      "loss    2.305551846822103\n",
-      "accuracy    0.06770833333333333\n",
-      "loss    2.3050097465515136\n",
-      "accuracy    0.075\n",
-      "loss    2.306152139391218\n",
-      "accuracy    0.0625\n",
-      "loss    2.3057370450761585\n",
-      "accuracy    0.05555555555555555\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecb33354da6144e491b8e7c97c70d60b",
+       "model_id": "9fbfe66c85a649f5b4286639697a9852",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -355,12 +319,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03a1e7f9cbdc412eae1d3f6d59595981",
+       "model_id": "012a8a8f61ed40609981f0d6df44f962",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -370,28 +334,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.3058249950408936\n",
+      "loss    2.299429416656494\n",
       "accuracy    0.09375\n",
-      "loss    2.3039015928904214\n",
-      "accuracy    0.10416666666666667\n",
-      "loss    2.3028614997863768\n",
-      "accuracy    0.128125\n",
-      "loss    2.302563258579799\n",
-      "accuracy    0.12723214285714285\n",
-      "loss    2.3030540148417153\n",
-      "accuracy    0.11805555555555555\n",
+      "loss    2.301255146662394\n",
+      "accuracy    0.11458333333333333\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74139f17f6454798a14284d4c7742df0",
+       "model_id": "88bf0fd5ebd848abb9ac708906bcfff1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -408,12 +366,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb9c9a1219d24098ad9117c3755b81e8",
+       "model_id": "8f0601a70db346e989e6895fcd364fb4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -423,28 +381,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.3067800998687744\n",
-      "accuracy    0.046875\n",
-      "loss    2.30475385983785\n",
-      "accuracy    0.06770833333333333\n",
-      "loss    2.3035507678985594\n",
-      "accuracy    0.09375\n",
-      "loss    2.3026740550994873\n",
-      "accuracy    0.10044642857142858\n",
-      "loss    2.303250869115194\n",
-      "accuracy    0.09375\n",
+      "loss    2.3040478229522705\n",
+      "accuracy    0.140625\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a019671343914fbf9a0df2729f9e695e",
+       "model_id": "a734e75393c044f78576c4714473fd1e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -461,12 +411,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfa1728f7afd44ff9b2a9143c98fbabb",
+       "model_id": "b4e37fd55aa24ae595e6f8dcf81045a5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -476,15 +426,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.304008960723877\n",
-      "accuracy    0.0625\n",
-      "loss    2.3019065062204995\n",
-      "accuracy    0.11458333333333333\n",
-      "loss    2.3030813217163084\n",
-      "accuracy    0.1\n",
-      "loss    2.3035426821027483\n",
-      "accuracy    0.08705357142857142\n",
-      "loss    2.303857167561849\n",
+      "loss    2.304626703262329\n",
+      "accuracy    0.125\n",
+      "loss    2.304081122080485\n",
       "accuracy    0.08333333333333333\n",
       "\n"
      ]
@@ -492,12 +436,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2625e803c9f4896890e500c5035a6e0",
+       "model_id": "27a0f2296d834cb7ada9b10ce4485ff2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -514,12 +458,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d5baedb7e4a41939a128eb6dfdfaefd",
+       "model_id": "3c611f0aaad44b97ba9bc4aa434784c1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -529,28 +473,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.301762580871582\n",
-      "accuracy    0.09375\n",
-      "loss    2.3027278582255044\n",
-      "accuracy    0.09895833333333333\n",
-      "loss    2.302763509750366\n",
-      "accuracy    0.096875\n",
-      "loss    2.3027816159384593\n",
-      "accuracy    0.08482142857142858\n",
-      "loss    2.3030331399705677\n",
-      "accuracy    0.0920138888888889\n",
+      "loss    2.302835702896118\n",
+      "accuracy    0.109375\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3747045a20c14be982c365f9aecf9960",
+       "model_id": "9811300b93c24df3b2bc0d360ae968e9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -567,12 +503,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de40e6723ec3440da4bce82a5ae94b14",
+       "model_id": "f9eec4287fe945ffa9740eb5181d8f0f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -582,28 +518,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.3026790618896484\n",
-      "accuracy    0.046875\n",
-      "loss    2.3020344575246177\n",
-      "accuracy    0.07291666666666667\n",
-      "loss    2.3022915363311767\n",
-      "accuracy    0.078125\n",
-      "loss    2.302025011607579\n",
-      "accuracy    0.08482142857142858\n",
-      "loss    2.302196158303155\n",
-      "accuracy    0.08680555555555555\n",
+      "loss    2.302379608154297\n",
+      "accuracy    0.15625\n",
+      "loss    2.3042122522989907\n",
+      "accuracy    0.08333333333333333\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "243928b800de48e48f2f220ec38712ae",
+       "model_id": "802009168ce446128b0b670a52f24588",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -620,12 +550,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d30f7058cbf403a953e1681c8a9b9ad",
+       "model_id": "7e8f66a630ab4e0781ea0e62f8283e8c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='train', max=10, style=ProgressStyle(description_width='initia…"
+       "HBox(children=(IntProgress(value=0, description='train', max=3, style=ProgressStyle(description_width='initial…"
       ]
      },
      "metadata": {},
@@ -635,28 +565,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss    2.3002796173095703\n",
-      "accuracy    0.15625\n",
-      "loss    2.301819642384847\n",
-      "accuracy    0.13541666666666666\n",
-      "loss    2.3030513763427733\n",
-      "accuracy    0.10625\n",
-      "loss    2.303119250706264\n",
-      "accuracy    0.10267857142857142\n",
-      "loss    2.3027315934499106\n",
-      "accuracy    0.10590277777777778\n",
+      "loss    2.303207039833069\n",
+      "accuracy    0.109375\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f61c1fef7b54e8885c5465eb52d6503",
+       "model_id": "21aa678f75db4adbb698d2b0f415fee9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='evaluate', max=10, style=ProgressStyle(description_width='ini…"
+       "HBox(children=(IntProgress(value=0, description='evaluate', style=ProgressStyle(description_width='initial')),…"
       ]
      },
      "metadata": {},
@@ -673,7 +595,7 @@
    "source": [
     "from tqdm import tqdm_notebook as tqdm\n",
     "\n",
-    "trainer.fit(d, d, epochs=10, callbacks=cbs, pbar=tqdm)"
+    "trainer.fit(d, d, epochs=10, callbacks=cbs, pin_memory=True)"
    ]
   },
   {
