--- a/dc_gan.ipynb
+++ b/dc_gan.ipynb
@@ -12,9 +12,8 @@
     "import numpy as np\n",
     "\n",
     "from tensorflow.keras import datasets as dts\n",
-    "from torch_modules import commons as commons\n",
-    "from torch_modules.training.trainer import GANTrainer\n",
-    "from torch_modules.training import callbacks, data"
+    "from plasma import gan_layers as layers, commons\n",
+    "from plasma.training import trainer, gan_callbacks as callbacks, data"
    ]
   },
   {
@@ -30,6 +29,28 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 28, 28)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train = x_train / 127.5 - 1\n",
+    "\n",
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 32"
@@ -37,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,69 +68,112 @@
     "        return x_train.shape[0]\n",
     "    \n",
     "    def get_item(self, idx):\n",
-    "        return x_train[idx, None] / 127.5 - 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = nn.Sequential(\n",
-    "    nn.Conv2d(1, 64, kernel_size=3, padding=1),\n",
-    "    nn.BatchNorm2d(64),\n",
-    "    nn.LeakyReLU(0.2),\n",
-    "    nn.Conv2d(64, 128, kernel_size=3, stride=2, padding=1),\n",
-    "    nn.BatchNorm2d(128),\n",
-    "    nn.LeakyReLU(0.2),\n",
-    "    nn.Conv2d(128, 256, kernel_size=3, stride=2, padding=1),\n",
-    "    nn.BatchNorm2d(256),\n",
-    "    nn.LeakyReLU(0.2),\n",
-    "    commons.Reshape(7 * 7 * 256),\n",
-    "    nn.Linear(7 * 7 * 256, 1),\n",
-    ").cuda(0)"
+    "        return x_train[idx, None]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): ScaleCon(in_channels=1, out_channels=64, kernel_size=1, stride=1, padding=0, bias=True)\n",
+       "  (1): LeakyReLU(negative_slope=0.2)\n",
+       "  (2): ScaleCon(in_channels=64, out_channels=128, kernel_size=3, stride=1, padding=1, bias=True)\n",
+       "  (3): LeakyReLU(negative_slope=0.2)\n",
+       "  (4): Upsample(scale_factor=0.5, mode=bilinear)\n",
+       "  (5): ScaleCon(in_channels=128, out_channels=256, kernel_size=3, stride=1, padding=1, bias=True)\n",
+       "  (6): LeakyReLU(negative_slope=0.2)\n",
+       "  (7): Upsample(scale_factor=0.5, mode=bilinear)\n",
+       "  (8): MiniBatchStd()\n",
+       "  (9): ScaleCon(in_channels=257, out_channels=512, kernel_size=3, stride=1, padding=1, bias=True)\n",
+       "  (10): LeakyReLU(negative_slope=0.2)\n",
+       "  (11): ScaleCon(in_channels=512, out_channels=512, kernel_size=7, stride=1, padding=0, bias=True)\n",
+       "  (12): Reshape(shape=(-1,))\n",
+       "  (13): ScaleLinear(in_channels=512, out_channels=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class Generator(nn.Sequential):\n",
-    "    \n",
-    "    def forward(self, x=None):\n",
-    "        x = x or torch.randn(32, 128, device=\"cuda:0\")\n",
-    "        \n",
-    "        return super().forward(x)\n",
+    "d = nn.Sequential(\n",
+    "    layers.ScaleCon(1, 64, kernel_size=1, padding=0),\n",
+    "    nn.LeakyReLU(0.2),\n",
+    "    layers.ScaleCon(64, 128),\n",
+    "    nn.LeakyReLU(0.2),\n",
+    "    nn.Upsample(scale_factor=0.5, mode=\"bilinear\", align_corners=True),\n",
+    "    layers.ScaleCon(128, 256),\n",
+    "    nn.LeakyReLU(0.2),\n",
+    "    nn.Upsample(scale_factor=0.5, mode=\"bilinear\", align_corners=True),\n",
+    "    layers.MiniBatchStd(),\n",
+    "    layers.ScaleCon(257, 512),\n",
+    "    nn.LeakyReLU(0.2),\n",
+    "    layers.ScaleCon(512, 512, kernel_size=7, padding=0),\n",
+    "    commons.Reshape(-1),\n",
+    "    layers.ScaleLinear(512, 1)\n",
+    ").cuda(0)\n",
     "\n",
-    "g = Generator(\n",
-    "    nn.Linear(128, 7 * 7 * 256),\n",
-    "    nn.BatchNorm1d(7 * 7 * 256),\n",
-    "    nn.ReLU(),\n",
-    "    commons.Reshape(256, 7, 7),\n",
-    "    nn.ConvTranspose2d(256, 128, kernel_size=3, stride=2, padding=1, output_padding=1),\n",
-    "    nn.BatchNorm2d(128),\n",
-    "    nn.ReLU(),\n",
-    "    nn.ConvTranspose2d(128, 64, kernel_size=3, stride=2, padding=1, output_padding=1),\n",
-    "    nn.BatchNorm2d(64),\n",
-    "    nn.ReLU(),\n",
-    "    nn.Conv2d(64, 1, 1),\n",
-    "    nn.Tanh()\n",
-    ").cuda(0)"
+    "d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Generator(\n",
+       "  (0): ScaleLinear(in_channels=128, out_channels=25088, bias=True)\n",
+       "  (1): LeakyReLU(negative_slope=0.2)\n",
+       "  (2): Reshape(shape=(-1, 7, 7))\n",
+       "  (3): Upsample(scale_factor=2.0, mode=bilinear)\n",
+       "  (4): ScaleCon(in_channels=512, out_channels=256, kernel_size=3, stride=1, padding=1, bias=True)\n",
+       "  (5): LeakyReLU(negative_slope=0.2)\n",
+       "  (6): Upsample(scale_factor=2.0, mode=bilinear)\n",
+       "  (7): ScaleCon(in_channels=256, out_channels=128, kernel_size=3, stride=1, padding=1, bias=True)\n",
+       "  (8): LeakyReLU(negative_slope=0.2)\n",
+       "  (9): ScaleCon(in_channels=128, out_channels=1, kernel_size=1, stride=1, padding=0, bias=True)\n",
+       "  (10): Tanh()\n",
+       ")"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "opt = opts.Adam([\n",
-    "    {\"params\": d.parameters()},\n",
-    "    {\"params\": g.parameters()}\n",
-    "], lr=1e-3, betas=(0, 0.999))"
+    "class Generator(nn.Sequential):\n",
+    "    \n",
+    "    def forward(self, x=None, batch_size=32):\n",
+    "        x = x or torch.randn(batch_size, 128, device=\"cuda:0\")\n",
+    "        \n",
+    "        return super().forward(x)\n",
+    "\n",
+    "g = Generator(\n",
+    "    layers.ScaleLinear(128, 7 * 7 * 512),\n",
+    "    nn.LeakyReLU(0.2),\n",
+    "    commons.Reshape(-1, 7, 7),\n",
+    "    nn.Upsample(scale_factor=2, mode=\"bilinear\", align_corners=True),\n",
+    "    layers.ScaleCon(512, 256),\n",
+    "    nn.LeakyReLU(0.2),\n",
+    "    nn.Upsample(scale_factor=2, mode=\"bilinear\", align_corners=True),\n",
+    "    layers.ScaleCon(256, 128),\n",
+    "    nn.LeakyReLU(0.2),\n",
+    "    layers.ScaleCon(128, 1, kernel_size=1, padding=0),\n",
+    "    nn.Tanh()\n",
+    ").cuda(0)\n",
+    "\n",
+    "g"
    ]
   },
   {
@@ -118,7 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = Data()"
+    "d_opt = opts.Adam(d.parameters(), lr=1e-3, betas=(0, 0.99))\n",
+    "g_opt = opts.Adam(g.parameters(), lr=1e-3, betas=(0, 0.99))"
    ]
   },
   {
@@ -127,25 +192,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = GANTrainer(d, g, opt)"
+    "train = Data()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = trainer.GANTrainer(d, g, d_opt, g_opt, nn.BCEWithLogitsLoss(), r1=10, x_device=\"cuda:0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cbs = [\n",
+    "    callbacks.GenImage()\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:  1 / 100\n"
+      "epoch  1 / 100\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42d25f17f2144b47a5c5a7f6760eee74",
+       "model_id": "bd4befb1888c49aebe44dff29aeb0e78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,30 +240,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-9ece29709739>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrainer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mW:\\Projects\\research-idea\\torch_modules\\training\\trainer\\standard_gan.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, train, epochs, batch_size, n_workers, callbacks)\u001b[0m\n\u001b[0;32m     35\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Epoch: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0me\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"/\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 37\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_one_epoch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloader\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m             \u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mon_epoch_end\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mW:\\Projects\\research-idea\\torch_modules\\training\\trainer\\standard_gan.py\u001b[0m in \u001b[0;36mtrain_one_epoch\u001b[1;34m(self, loader, callbacks)\u001b[0m\n\u001b[0;32m     52\u001b[0m                 \u001b[0mgloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_generator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 54\u001b[1;33m                 \u001b[0mrunning_metrics\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdloss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgloss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     55\u001b[0m                 \u001b[0mlogs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetric_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrunning_metrics\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m                 \u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mon_batch_end\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlogs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
     }
    ],
    "source": [
-    "trainer.fit(train, epochs=100)"
+    "trainer.fit(train, epochs=100, callbacks=cbs)"
    ]
   },
   {
@@ -206,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "mimetype": "text/x-python",
   "name": "python",
